--- a/build.xml
+++ b/build.xml
@@ -6,29 +6,26 @@
 <property name="src.dir" location="src" />
 <property name="build.dir" location="bin" />
 <property name="dist.dir" location="dist" />
-<property name="docs.dir" location="docs" />
 
 <path id="class.path">
   <pathelement location="./lib/junit-4.11.jar" />
-  <pathelement location="./bin" />
+  <pathelement location="${build.dir}" />
 </path>
 
 
 <target name="clean">
   <delete dir="${build.dir}" />
-  <delete dir="${docs.dir}" />
   <delete dir="${dist.dir}" />
 </target>
 
 
 <target name="mkdir">
   <mkdir dir="${build.dir}" />
-  <mkdir dir="${docs.dir}" />
   <mkdir dir="${dist.dir}" />
 </target>
 
 
-<target name="compile" depends="clean,mkdir">
+<target name="compile" depends="clean, mkdir">
   <javac srcdir="${src.dir}" destdir="${build.dir}">
     <classpath refid="class.path" />
   </javac>
